Afghanistan Intervention Mechanic

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -84,12 +84,15 @@ l_english:
  AST_anzac_class2_effect_tt: "Deploys §Y5§! Anzac-Class ships in §YMelbourne§! naval base."
  AST_armidale_class_effect_tt: "§Y6§! Armidale-class ships will be deployed in §YMelbourne§Y! naval base."
  AST_armidale2_class_effect_tt: "No ships will be deployed."
- AST_submarines.tt: "If a deal was made with the United States, 5 submarines will arrive in 180 days. If a deal was made with France, 5 submarines will arrive in 200 days."
+ AST_submarines.tt: "\nIf a deal was made with the [USA.GetFlag]§BUnited States§!, §Y5 submarines§! will arrive in §Y180 days§!. If a deal was made with [FRA.GetFlag]§BFrance§!, §Y5 submarines§! will arrive in §Y200 days§!."
  AST_attack_class_effect_tt: "Deploys §Y5§! Attack-Class submarines in §YMelbourne§! naval base."
  AST_attack_class2_effect_tt: "The US will commandeer the submarines." #Not really
  australia_md.7.tt: "Will deploy §Y3§! Hobart-Class Air Warfare Destroyers in §Y180§! days."
  AST_attack_class2_effect2_tt: "France will commandeer the submarines." #Not really
- AST_afghanistan_involvement_warning_tt: "The war in Afghanistan is a guerilla conflict, and dire consequences could result from our involvement if we aren't careful in choosing our intervention forces. If sent to Afghanistan, our boys will serve a tour of §Y2 years§!"
+ AST_afghanistan_involvement_warning_tt: "\nThe war in §GAfghanistan§! is a guerilla conflict, and dire consequences could result from our involvement if we aren't careful in choosing our intervention forces. If sent to §GAfghanistan§!, our boys will serve a tour of §Y2 years§! after §Y80 days§! of training in boot camp."
+ AST_2_level_simone_wilkie_TT: "Will add §H2 Skill Levels§! to §HSimone Wilkie§!"
+ AST_2_level_david_hurley_TT: "Will add §H2 Skill Levels§! to §HDavid Hurley§!"
+ AST_2_level_shane_caughey_TT: "Will add §H2 Skill Levels§! to §HShane Caughey§!"
 
 #Tech Boosts
  AST_anzac-class: "Anzac-Class Advancements"
