Wonders fixing and modifying

--- a/localisation/english/monument_effects_l_english.yml
+++ b/localisation/english/monument_effects_l_english.yml
@@ -401,9 +401,9 @@
  MONUMENT_81_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$ \n   $recruitable_population_factor$: §G+20.00%§! \n\n$MONUMENT_COUNTRY_BONUS$ \n   $stability_factor$: §G+5.00%§! \n   $political_power_factor$: §G+10.00%§!"
 
  MONUMENT_82_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
- MONUMENT_82_LEVEL_1_BONUS: "$MONUMENT_COUNTRY_BONUS$ \n   $political_advisor_cost_factor$: §G-10.00%§!"
- MONUMENT_82_LEVEL_2_BONUS: "$MONUMENT_COUNTRY_BONUS$ \n   $political_advisor_cost_factor$: §G-15.00%§! \n   $opinion_gain_monthly_factor$: §G+10.00%§!"
- MONUMENT_82_LEVEL_3_BONUS: "$MONUMENT_COUNTRY_BONUS$ \n   $political_advisor_cost_factor$: §G-20.00%§! \n   $opinion_gain_monthly_factor$: §G+20.00%§! \n   $improve_relations_maintain_cost_factor$: §G-15.00%§!"
+ MONUMENT_82_LEVEL_1_BONUS: "$MONUMENT_BONUS_NONE$ \n"
+ MONUMENT_82_LEVEL_2_BONUS: "$MONUMENT_COUNTRY_BONUS$ \n   $opinion_gain_monthly_factor$: §G+10.00%§!"
+ MONUMENT_82_LEVEL_3_BONUS: "$MONUMENT_COUNTRY_BONUS$ \n   $opinion_gain_monthly_factor$: §G+20.00%§! \n   $improve_relations_maintain_cost_factor$: §G-15.00%§!"
 
  MONUMENT_83_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
  MONUMENT_83_LEVEL_1_BONUS: "$MONUMENT_COUNTRY_BONUS$ \n   $resistance_growth$: §G-5.00%§!"
