Added test monument in EQU

--- a/localisation/english/monument_effects_l_english.yml
+++ b/localisation/english/monument_effects_l_english.yml
@@ -899,3 +899,8 @@
  MONUMENT_182_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$ \n   $local_building_slots$: §G+1§! \n   $local_supplies$: §G+10.00%§!"
  MONUMENT_182_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$ \n   $local_building_slots$: §G+2§! \n   $local_supplies$: §G+25.00%§! \n   $state_production_speed_buildings_factor$: §G+5.00%§!"
  MONUMENT_182_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$ \n   $local_building_slots$: §G+3§! \n   $local_supplies$: §G+50.00%§! \n   $state_production_speed_buildings_factor$: §G+10.00%§! \n\n$MONUMENT_COUNTRY_BONUS$ \n   $trade_opinion_factor$: §G+20.00%§!"
+
+ MONUMENT_1001_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1001_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$ \n   $local_building_slots$: §G+1§! \n   $local_supplies$: §G+10.00%§!"
+ MONUMENT_1001_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$ \n   $local_building_slots$: §G+2§! \n   $local_supplies$: §G+25.00%§! \n   $state_production_speed_buildings_factor$: §G+5.00%§!"
+ MONUMENT_1001_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$ \n   $local_building_slots$: §G+3§! \n   $local_supplies$: §G+50.00%§! \n   $state_production_speed_buildings_factor$: §G+10.00%§! \n\n$MONUMENT_COUNTRY_BONUS$ \n   $trade_opinion_factor$: §G+20.00%§!"
