--- a/localisation/english/monuments_l_english.yml
+++ b/localisation/english/monuments_l_english.yml
@@ -536,3 +536,6 @@
 
  MONUMENT_182_NAME: "Canal du Midi"
  MONUMENT_182_DESC: "The §Y$MONUMENT_182_NAME$§! is a 240 kilometers long canal in [This.GetName]. Originally named the §YCanal royal en Languedoc§! and renamed by French revolutionaries to §Y$MONUMENT_182_NAME$§! in 1789, the canal is considered one of the greatest construction works of the 17th century. It connects the Mediterranean Sea and the Atlantic Ocean, with the help of the §YCanal de Garonne§!."
+
+ MONUMENT_1001_NAME: "Hotel Sipopo"
+ MONUMENT_1001_DESC: "The §Y$MONUMENT_1001_NAME$§! is a test monument."
