--- a/localisation/french/MD_defence_companies_l_french.yml
+++ b/localisation/french/MD_defence_companies_l_french.yml
@@ -227,9 +227,9 @@
  SPR_navantia_naval_manufacturer2: "Navantia"
  SPR_airbus_defence_aircraft_manufacturer: "Airbus Defence"
  SPR_casa_aircraft_manufacturer: "Construcciones Aeronáuticas SA"
- SPR_airbus_helicopters_tank_manufacturer: "Airbus Helicopters"
- SUD_military_industry_corporation_materiel_manufacturer: "Military Industry Corporation"
- SUD_military_industry_corporation_tank_manufacturer: "Military Industry Corporation"
+ SPR_airbus_helicopters_tank_manufacturer: "Airbus Helicopters - Helicopter Division"
+ SUD_military_industry_corporation_materiel_manufacturer: "Military Industry Corporation - Materiel Division"
+ SUD_military_industry_corporation_tank_manufacturer: "Military Industry Corporation - Armoured Division"
  SWE_bae_systems_hagglunds_tank_manufacturer: "BAE Systems Hägglunds"
  SWE_bae_systems_bofors_tank_manufacturer: "BAE Systems Bofors"
  SWE_saab_bofors_dynamics_materiel_manufacturer: "Saab Bofors Dynamics"
