--- a/localisation/french/MD_focus_EU_POTEF_l_french.yml
+++ b/localisation/french/MD_focus_EU_POTEF_l_french.yml
@@ -24,11 +24,11 @@
  POTEF110: "Pacifique"
  POTEF110_desc: "L'Europe est verte, mais le Pacifique est encore sombre et gris. L'Europe doit diffuser ses politiques et ses technologies dans le monde entier et lutter contre les empires de l'énergie fossile qui détruisent la planète."
  POTEF150: "Doctrine allemande"
- POTEF150_desc: "§Y[GER.GetNameWithFlag]§! s'est traditionnellement concentrée sur des forces blindées puissantes. Avec la doctrine blindée, tous les États membres peuvent adopter cette tradition et cette tactique."
+ POTEF150_desc: "§Y[GER.GetNameWithFlag]§! traditionally focused on strong armoured forces. With the Armoured Doctrine all member states can adopt this tradition and tactics."
  POTEF151: "L'Empire du commerce"
  POTEF151_desc: "La Fédération européenne deviendra un empire du commerce."
  POTEF200: "Doctrine française"
- POTEF200_desc: "§Y[FRA.GetNameWithFlag]§! s'est traditionnellement concentrée sur des forces blindées légères et motorisées très mobiles. Avec la doctrine de la guerre de manœuvre, tous les États membres peuvent adopter cette tradition et ces tactiques."
+ POTEF200_desc: "§Y[FRA.GetNameWithFlag]§! traditionally focused on highly mobile light armored and motorized forces. With the Maneuver Warfare Doctrine all member states can adopt this tradition and tactics."
  POTEF201: "Le pouvoir impérial"
  POTEF201_desc: "La Fédération européenne s'inscrit dans la tradition de ses prédécesseurs impériaux."
  POTEF202: "L'Empire de la liberté"
@@ -44,7 +44,7 @@
  POTEF207: "La résurrection de Buster"
  POTEF207_desc: "Pour contrer la menace américaine en Europe, l'état-major général de l'§YUED§! a proposé de s'allier avec §Y[CAN.GetNameWithFlag]§! et de réviser le schéma de défense n°1, un plan créé par le lieutenant-colonel canadien James « Buster » Sutherland Brown, pour une attaque préventive canadienne contre les États-Unis en cas de conflit imminent entre les États-Unis et l'Empire britannique. Grâce à ce plan, l'§YUED§! peut lancer une invasion depuis le Nord sur §Y[USA.GetNameWithFlag]§!."
  POTEF250: "Doctrine du Benelux"
- POTEF250_desc: "Après la guerre froide, les §YPays-Bas§! se sont concentrés sur les forces aéromobiles pour s'adapter à la nouvelle situation. Avec la doctrine aéromobile, tous les États membres peuvent adopter cette tactique."
+ POTEF250_desc: "After the Cold War §Ythe Low Countries§! focused on air mobile forces to fit the new situation. With the Air Mobile Doctrine all member states can adopt these tactics."
  POTEF251: "L'héritage libéral"
  POTEF251_desc: "La Fédération européenne honore son héritage libéral."
  POTEF252: "Protéger les anciennes routes commerciales"
@@ -52,7 +52,7 @@
  POTEF253: "Indonésie"
  POTEF253_desc: "La Fédération européenne doit améliorer ses relations avec l'ancienne colonie néerlandaise, §Y[IND.GetNameWithFlag]§!, et construire de nouveaux avant-postes stratégiques en Asie du Sud-Est."
  POTEF300: "Doctrine ibérique"
- POTEF300_desc: "Les §Ypays ibériques§! se sont traditionnellement concentrés sur des forces marines fortes. Avec la doctrine des marines, tous les États membres peuvent adopter cette tradition et ces tactiques."
+ POTEF300_desc: "The §YIberian countries§! traditionally focused on strong Marine forces. With the Marines Doctrine all member states can adopt this tradition and tactics."
  POTEF301: "Cousins latins"
  POTEF301_desc: "La Fédération européenne doit améliorer ses relations avec les anciennes colonies d'Amérique du Sud."
  POTEF302: "Mexique"
@@ -212,16 +212,7 @@
  POTEF_special_forces_doctrine: "Doctrine des forces spéciales"
  POTEF_special_forces_doctrine_desc: "Les §Ypays baltes§! se sont traditionnellement concentrés sur des forces spéciales de petite taille et très performantes. Avec la doctrine des forces spéciales, tous les États membres peuvent adopter cette tradition et ces tactiques."
  POTEF_extensive_special_forces_doctrine: "Doctrine étendue des forces spéciales"
- POTEF_extensive_special_forces_doctrine_desc: "Les §Ypays baltes§! se sont traditionnellement concentrés sur des forces spéciales de petite taille et très performantes. Avec la doctrine des forces spéciales, tous les États membres peuvent adopter cette tradition et ces tactiques."
- EU_POTEF.1.t: "Doctrine des Alpes"
- EU_POTEF.1.d: "En raison des récents hivers rigoureux dans la chaîne de montagnes des Alpes, l'UE a décidé d'organiser un entraînement alpin pour les armées européennes. Cela permettra aux armées européennes d'être prêtes à combattre en hiver et dans un environnement montagneux."
- EU_POTEF.1.a: "Nous devons être prêts à nous battre dans n'importe quel environnement !"
- EU_POTEF_news.3.t: "Briser le mur !"
- EU_POTEF_news.3.d: "Officiellement - Aujourd'hui, la Fédération européenne et le Mexique ont stationné leurs armées à la frontière américaine. Nous pouvons nous attendre à ce que le « mur de Trump » soit bientôt détruit."
- EU_POTEF_news.3.a: "Nous devons nous débarrasser de ce géant américain !"
- EU_POTEF_news.4.t: "La résurrection de Buster"
- EU_POTEF_news.4.d: "Officiellement - Aujourd'hui, la Fédération européenne et le Canada ont stationné leurs armées à la frontière américaine. Nous pouvons nous attendre à ce qu'une percée des armées européennes et canadiennes dans le Nord se produise bientôt."
- EU_POTEF_news.4.a: "Nous devons nous débarrasser de ce géant américain !"
+ POTEF_extensive_special_forces_doctrine_desc: "The §YBaltic countries§! traditionally focused on small and highly capable Special Forces. With the Special Forces Doctrine all member states can adopt this tradition and tactics."
  EU_POTEF_environmental_imperialism_decision: "Exiger des réformes environnementales"
  EU_POTEF_environmental_imperialism_decision_desc: "Nous devons lutter contre le réchauffement climatique. Si §Y[FROM.GetNameWithFlag]§! ne fait pas les §Gréformes environnementales§! nécessaires par lui-même, nous devons le forcer à le faire. Ils doivent avoir au moins une §Yraffinerie de biocarburant§! pour chaque État qu'ils possèdent. Si §Y[FROM.GetNameWithFlag]§! ne répond pas à nos exigences dans un délai d'un mois, nous leur imposerons des §Rsanctions environnementales§!."
  EU_POTEF_environmental_imperialism_mission: "Réformes environnementales"
