--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -5507,3 +5507,9 @@
  PER_high_inbreeding_desc: "'§HKeep it in the family§!!'\nWhy go down the street to get laid when you can go down the hall? In Rasht, family drama is more complicated than the Russian tree in MD! My uncle used to always say, women are like coffee, hot, wet and just like my grandma."
  PER_incompetant_joint_chiefs_of_staff: "Incompetent Joint Chiefs of Staff"
  PER_incompetant_joint_chiefs_of_staff_desc: "The incompetence of the Artesh, and it's Joint Chiefs of Staff was exposed in the wake of the second Iranian revolution. This was due to several factors, one of which being the division of the Iranian army into 2 forces. This lack of leadership and the obvious incompetence has put a massive strain on the command structure and will make conducting any sort of operation a logistical nightmare.\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we complete the §HWar University§! focus."
+ PER_idea_increased_immigration: "Afghan Migrant Influx"
+ PER_anti_immigration_policies_idea: "Restricting Afghan Migrations"
+ iran_md.245.t: "Influx of Afghan Migrants"
+ iran_md.245.d: "As a result of the devestating conflict currently raging in Afghanistan, many people have decided to flee their homes and make a daring attempt to flee into Iran. As a result, our infrastructure in the Eastern regions have come under stress, and some people within our nation are less accepting of foreigners entering Iran, even if its for refuge."
+ iran_md.245.a: "They are welcome here"
+ iran_md.245.b: "Iran is full, sorry"
