--- a/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
+++ b/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
@@ -967,7 +967,7 @@
  Serbia.7.d: "WIP"
  Serbia.7.a: "The farmers could use more help than anyone right now"
  Serbia.7.b: "We can't ignore our most concentrated populations"
- Serbia.8.d: "WIP"
+ Serbia.8.d: "A cyanide spill near Baia Mare, Romania, by the gold mining company Aurul has polluted the Someș, Tisza, and Danube rivers. This disaster is killing large numbers of fish in Hungary, Serbia, and Romania, and is now being called the worst environmental disaster in Europe since Chornobyl."
  Serbia.8.a: "Blame foreign resource extracting companies"
  Serbia.8.b: "Cooperate a cleanup with Romania"
  Serbia.9.d: ""
@@ -2026,3 +2026,4 @@
  SER_german_baseies_desc: "Many large German corporations are ready to invest in our economy."
  SER_usa_baseies: "American Investments"
  SER_usa_baseies_desc: "Many large American corporations are ready to invest in our economy."
+ Serbia.8.t: "Cyanide Spills in Danube"
