--- a/localisation/french/MD_ideas_l_french.yml
+++ b/localisation/french/MD_ideas_l_french.yml
@@ -419,8 +419,6 @@
  swiss_political_system_desc: "Switzerland has a very unique political system and is the only country in the world that can rightfully call itself a 'semi-direct democracy'. Citizens can change the constitution per referendum, veto laws per referendum, can even pass laws per referendum.\nThis has implications for politicians however: Because the people make the policies either way, the Swiss coalition system has to include as many forces as possible. The four big parties of Switzerland, SVP, FDP, CVP and SP, are constantly in government together - this makes national elections in Switzerland more or less useless - as the people rule not through their representatives, but through referendums."
  finnish_neutrality: "Finnish Neutrality"
  finnish_neutrality_desc: "Finland, although to some extent protected by the western democratic nations, has carefully preserved its neutrality - mainly to not insult the Russians."
- Migrant_Crisis_Europe: "Migrant Crisis"
- Migrant_Crisis_Europe_desc: "The Migrant crisis has hit Europe like a hammer, pounding away at both national unity and the popularity of ruling parties. The war in Syria has caused thousands of refugees to flee to neighboring countries, and although Europe stood at the ready to accept those suffering from war, the amount of new and permanent migrants from all over North Africa and the Middle East have overwhelmed Europe's institutions and made many resent the newcomers."
  german_legacy: "German Legacy"
  german_legacy_desc: "§YSpecial Rules:§! §WCan ban extremist parties.\nCDU/CSU and SPD can always form a coalition.§!\n\nWith the weight of Nazi war crimes on their shoulders, and as the instigator of the Second World War, Germany has worked hard to shred its bad image by refraining from even hinting towards a nationalistic outlook or militarism. In legal terms, Germany is bound by the 1990 Treaty on the Final Settlement with Respect to Germany, between Germany and the allied powers of Russia, the United States, the United Kingdom and France, as well as a separate final border treaty with Poland. This treaty makes it illegal for Germany to ever make territorial claims, possess nuclear weapons and limits its armed forces to less than 370.000 personnel in total."
  GER_idea_german_education_reforms: "German Education Reforms"
@@ -919,3 +917,7 @@
  idea_generic_the_manpower_solution_desc: "We can encourage more people into our workforce we can have all of the country's economic sectors improved."
  idea_generic_worker_productivity: "Improved Per Capita Productivity"
  idea_generic_worker_productivity_desc: "Our workers are extremely productive and due to recent improvement in technology we should continue to encourage this change and pivot in our nation."
+ MNC_city_of_casino: "The Casino City for the Rich"
+ MNC_city_of_casino_desc: "Monaco is lovingly known in Europe as the \"Casino City\" due to the numerous casinos. In particular, the casinos in Monaco cater to the rich in tandem with the city being a playground for billionaires and the rich."
+ naval_power_of_the_continent: "Naval Power of the Continent"
+ naval_power_of_the_continent_desc: "We possess the largest naval power of our continent and we currently represent the largest naval power on our continent. Someone can overtake us assuming their §YDeployed Naval Manpower§! is larger than ours."
