--- a/localisation/french/MD_international_l_french.yml
+++ b/localisation/french/MD_international_l_french.yml
@@ -177,12 +177,12 @@
  ct_capable_nation: "Est capable d'envoyer et de fournir des conseillers."
  has_not_sent_advisors: "N'a pas envoyé de conseillers dans ce pays"
  has_sent_advisors: "A envoyé des conseillers dans cette nation"
- fund_derad_tt: "Ne finance pas la déradicalisation"
+ fund_derad_tt: "Is not funding deradicalization"
  conduct_training_tt: "N'organise pas de formation à la lutte contre le terrorisme"
  conduct_raid_tt: "Ne mène pas de raids antiterroristes"
  conduct_strike_tt: "N'effectue pas de frappes aériennes de contre-terrorisme"
  terror_fund_deradicalisation_programmes: "Financement des programmes de déradicalisation"
- terror_ct_training_mission: "Formation à la lutte contre le terrorisme Exerciese"
+ terror_ct_training_mission: "Counter-Terror Training Exercise"
  terror_conduct_raid: "Conduite de raids antiterroristes"
  terror_conduct_strike: "Mener des frappes aériennes antiterroristes"
  IS_counter_terror_button_text: "Lutte contre le terrorisme"
@@ -201,3 +201,31 @@
  ct_region_asia_button_text: "Asie centrale"
  ct_region_africa_button_text: "Afrique subsaharienne"
  ct_region_me_button_text: "Moyen-Orient"
+ CT_terror_radicalization_text_delayed: "This value represents the current level of §YRadicalization§! in a nation. The value of §YRadicalization§! can have a different minimum and maximum based on a variety of conditions. The conditions include whether a nation is at war, has high Corruption, low stability, is a jihadist government, the completion of specific national focuses or has a low GDP/c.\n\n[CT_radicalization_clamp_display]"
+ CT_radicalization_clamp_one: "\n[THIS.GetNameWithFlag] §YRadicalization§! Max: 100\n[THIS.GetNameWithFlag] §YRadicalization§! Min: 30"
+ CT_radicalization_clamp_two: "\n[THIS.GetNameWithFlag] §YRadicalization§! Max: 100\n[THIS.GetNameWithFlag] §YRadicalization§! Min: 20"
+ CT_radicalization_clamp_three: "\n[THIS.GetNameWithFlag] §YRadicalization§! Max: 100\n[THIS.GetNameWithFlag] §YRadicalization§! Min: 10"
+ CT_radicalization_clamp_four: "\n[THIS.GetNameWithFlag] §YRadicalization§! Max: 100\n[THIS.GetNameWithFlag] §YRadicalization§! Min: 0"
+ CT_terror_threat_text_delayed: "This value represents the current level of §YThreat Level§! in a nation. The value of §YThreat Level§! can have a different minimum and maximum based on a variety of conditions. The conditions include whether a nation is at war, has high Corruption, low stability, is a jihadist government, the completion of specific national focuses or has a low GDP/c.\n\n[THIS.CT_threat_level_clamp_display]"
+ CT_threat_level_clamp_one: "\n[THIS.GetNameWithFlag] §YThreat Level§! Max: 100\n[THIS.GetNameWithFlag] §YThreat Level§! Min: 75"
+ CT_threat_level_clamp_two: "\n[THIS.GetNameWithFlag] §YThreat Level§! Max: 90\n[THIS.GetNameWithFlag] §YThreat Level§! Min: 50"
+ CT_threat_level_clamp_three: "\n[THIS.GetNameWithFlag] §YThreat Level§! Max: 70\n[THIS.GetNameWithFlag] §YThreat Level§! Min: 30"
+ CT_threat_level_clamp_four: "\n[THIS.GetNameWithFlag] §YThreat Level§! Max: 60\n[THIS.GetNameWithFlag] §YThreat Level§! Min: 20"
+ CT_threat_level_clamp_five: "\n[THIS.GetNameWithFlag] §YThreat Level§! Max: 50\n[THIS.GetNameWithFlag] §YThreat Level§! Min: 10"
+ CT_threat_level_clamp_six: "\n[THIS.GetNameWithFlag] §YThreat Level§! Max: 40\n[THIS.GetNameWithFlag] §YThreat Level§! Min: 0"
+ MOR_promote_tolerant_islam: "§YPromote§! al-Wasatiyyah"
+ MOR_promote_tolerant_islam_desc: "Morocco is well-known for its moderate interpretations of Islam. The Moroccan principle of al-Wasatiyyah, or moderation, combines the Maliki school of Islamic jurisprudence, Ashari theology and Sunni Sufism. The Kingdom has always maintained that the most effective way to prevent terrorism is to spread this form of moderate Islam to counteract extremist interpretations.\n\nWe can ensure more nations receive our teachings by having §YInfluence§! in other nations."
+ OMA_promote_tolerant_islam: "§YPromote§! Ibadi Islam"
+ OMA_promote_tolerant_islam_desc: "Omani society has been largely immune to extremist Islamic ideologies. This is in large part due to the prevalence of Ibadi Islam, which promotes tolerance of other religions. Ibadis favor the peaceful resolution of disputes rather than confrontation, and as such are not prone to radicalization. Oman has always maintained that the most effective way to prevent terrorism is to spread Ibadi Islam to counteract extremist ideologies.\n\nWe can ensure more nations receive our teachings by having §YInfluence§! in other nations."
+ MENA_terror_fund_deradicalisation_programmes: "§YFund§! De-Radicalization Programs"
+ MENA_terror_fund_deradicalisation_programmes_desc: "Imprisoned jihadists are not irredeemable. Many low-level foot soldiers in extremist organizations are simply misguided youths who have fallen victim to deviant forms of Islam that preach death against fellow Muslims. We should carry out deradicalization programs to reintegrate these disillusioned young men and women into society. The effectiveness of the programs is tied to our welfare spending."
+ terror_fund_deradicalisation_programmes_tt: "The higher your §Y$social_budget$§! the more effective the §YDe-Radicalization Programs§! will be.\n\n"
+ MENA_terror_ct_training: "§YConduct§! Counter-Terrorism Training"
+ MENA_terror_ct_training_desc: "To maximize our responsiveness to the terrorist threat we should continually update the preparedness of our security services. The better our §YOfficer Training§! is and the more foreign advisors that we have stationed on our territory, the more effective this training will be."
+ terror_ct_training: "§YCounter Terror Training§! Level (Current: [?ct_training|Y2]) determines the likelihood of success for raids and airstrikes.\n§YCounter Terror Training§! Level gained is determined by the number of foreign advisors (Current Foreign Advisors: [?foreign_adivsors|Y0]) and our current officer training law.\n\nEvery Foreign Advisor will increase §YCounter Terror Training§! Level by §G+0.25§! per training (Current Foreign Advisors: [?foreign_adivsors|Y0])\nEvery §Y$Officer_Training_Law$§! after §Y$officer_advanced_training$§! will increase §YCounter Terror Training§! Level by §G+0.50§! per training.\n\nConducting training will increase our §YCounter Terror Training§! Level by [?foreign_advisors_math|+G]\n\n§RCounter Terror Training Level has a max of§! 10 §Rand decreases at a rate of§! 0.2 §Rper month.§!"
+ MENA_terror_conduct_raid: "§YRaid§! Terrorist Hideouts"
+ MENA_terror_conduct_raid_desc: "Our security services have identified terrorist hideouts within our territory. We should conduct special forces raids to arrest suspected jihadists and seize illegal weapons. The likelihood of these raids succeeding depends on the amount of counter-terrorism training that our security personnel have gone through."
+ terror_conduct_raid_tt: "If the raid is §Gsuccessful§!, §YTerror Threat§! will decrease by §G-5§! (Current Threat: [?threat_level|Y0]) and §YRadicalization§! will increase by §R+2§! (Current Radicalization: [?radicalization|Y0]).\nIf the raid is §Runsuccessful§!, §YTerror Threat§! will not change and §YRadicalization§! will increase by §R+5§! (Current Radicalization: [?radicalization|Y0]).\n§GHas a higher likelihood of success than airstrikes.§!\n\nThe raid has a base success rate of §Y40%§!\nEach level of §YCounter Terror Training§! increases the likelihood of success by §G+5.00%§!\n(Current §YCounter Terror Training§! Level: [?ct_training|Y2])\n\n\n"
+ MENA_terror_conduct_strike: "§YLaunch§! Airstrikes on Terrorist Hideouts"
+ MENA_terror_conduct_strike_desc: "There are multiple jihadist hideouts in remote areas of the country where the authority of the central government is limited. We should target these hideouts with airstrikes to eliminate the threat that these jihadists pose. The likelihood of these strikes succeeding depends on the amount of counter-terrorism training that our security personnel have gone through."
+ terror_conduct_strike_tt: "If the airstrike is §Gsuccessful§!, §YTerror Threat§! will decrease by §G-5§! (Current Threat: [?threat_level|Y0]) and §YRadicalization§! will increase by §R+2§! (Current Radicalization: [?radicalization|Y0]).\nIf the airstrike is §Runsuccessful§!, §YTerror Threat§! will not change and §YRadicalization§! will increase by §R+5§! (Current Radicalization: [?radicalization|Y0]).\n§RHas a lower likelihood of success than raids.§!\n\nThe airstrike has a base sucess rate of §Y25%§!\nEach level of §YCounter Terror Training§! increases the likelihood of success by §G+5.00%§!\n(Current §YCounter Terror Training§! Level: [?ct_training|Y2])\n\n"
