--- a/localisation/french/MD_scripted_effects_l_french.yml
+++ b/localisation/french/MD_scripted_effects_l_french.yml
@@ -43,3 +43,7 @@
  BLOCK_OFFICER_TRAINING_DECREASE_TT: "§RNous ne pourrons pas diminuer les dépenses pour la §Yformation des officiers§! pendant un an !§!"
  OFFICER_TRAINING_INCREASE_BLOCKED_TT: "§RNous ne pouvons pas encore augmenter les dépenses pour la §Yformation des officiers§! !§! (Jours restants : [?officer_training_increase_blocked:days_left|Y0])\n"
  OFFICER_TRAINING_DECREASE_BLOCKED_TT: "§RNous ne pouvons pas encore diminuer les dépenses pour la §Yformation des officiers§! !§! (Jours restants : [?officer_training_decrease_blocked:days_left|Y0])\n"
+ BLOCK_MIGRATION_LAW_INCREASE_TT: "§RWe won't be able to increase our §YMigration Law§! for a year!§!"
+ BLOCK_MIGRATION_LAW_DECREASE_TT: "§RWe won't be able to decrease our §YMigration Law§! for a year!§!"
+ MIGRATION_LAW_INCREASE_BLOCKED_TT: "§RWe can't increase our §YMigration Law§! at this point!§! (Days Left: [?officer_training_increase_blocked:days_left|Y0])\n"
+ MIGRATION_LAW_DECREASE_BLOCKED_TT: "§RWe can't decrease our §YMigration Law§! at this point!§! (Days Left: [?officer_training_decrease_blocked:days_left|Y0])\n"
