--- a/localisation/french/MD_tooltips_l_french.yml
+++ b/localisation/french/MD_tooltips_l_french.yml
@@ -23,8 +23,8 @@
  not_has_war_TT: "£trigger_no  §Y[This.GetName]§! is controlled by an enemy nation"
  has_bombers_TT: "£trigger_yes  At least §Y1 Strategic Bomber§! in reserve"
  not_has_bombers_TT: "£trigger_no  At least §Y1 Strategic Bomber§! in reserve"
- has_pp: "£trigger_yes  At least £pol_power_icon §Y100 Political Power§!"
- not_has_pp: "£trigger_no  At least £pol_power_icon §Y100 Political Power§!"
+ has_pp: "£trigger_yes  Au moins £pol_power_icon §Y100 poids politique§!"
+ not_has_pp: "£trigger_no  Au moins £pol_power_icon §Y100 poids politique§!"
  TT_game_over_warning: "§RGame Will End When Selecting This§!\n"
  modify_treasury_effect_tt: "[THIS.GetFlag][THIS.GetAdjective] §YTreasury§!: $$[?treasury_change|+] Billion\n"
  has_more_than_temp_treasury_tt: "[THIS.GetFlag][THIS.GetAdjective] §YTreasury§! is greater than $$[?temp_treasury|+] (Current: $$[?treasury|3Y])\n"
