--- a/localisation/french/replace/replaced_from_vanilla_research_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_research_l_french.yml
@@ -46,4 +46,4 @@
  CAT_encryption_tech: "Technologie de cryptage"
  CAT_decryption_tech: "Technologie de décryptage"
  CAT_nfibers_research: "Technologie des nanofibres"
- CAT_space_research: "Space Tech"
+ CAT_space_research: "Technologie de l'espace"
