--- a/localisation/french/MD_frontend_l_french.yml
+++ b/localisation/french/MD_frontend_l_french.yml
@@ -106,7 +106,7 @@
  MENU_MD_WIKI: "Trouvez des informations utiles sur Millennium Dawn : Un Monde Moderne sur le Wiki Gitlab !"
  MENU_STEAMWORKSHOP: "Laissez-nous une évaluation sur le Steam Workshop !"
  MENU_DISCORD: "Trouvez d'autres joueurs et discutez avec les développeurs sur Discord"
- MENU_VKONTAKTE: "Si vous parlez russe, suivez-nous sur VKontakte !"
+ MENU_VKONTAKTE: "If you know the Russian language - follow us in VKontakte!"
  MENU_REDDIT: "Discutez des Dev Diaries avec nous sur Reddit !"
  custom_diff_strong_irq: "@IRQ Renforcer l'Irak"
  custom_diff_strong_egy: "@EGY Renforcer l'Égypte"
@@ -170,3 +170,4 @@
  custom_diff_weak_dpr: "@DPR Affaiblir la République populaire de Donetsk"
  custom_diff_weak_lpr: "@LPR Affaiblir la République populaire de Lougansk"
  custom_diff_weak_leb: "@LEB Affaiblir le Liban"
+ VERSION_MD_LOADING: "Version: v1.10.2"
