--- a/localisation/french/MD_game_rules_l_french.yml
+++ b/localisation/french/MD_game_rules_l_french.yml
@@ -12,9 +12,9 @@
  MD_RANDOM_RULES: "Randomize Game Rules"
  RULE_HARD_AI_ECONOMIC: "Economic AI"
  RULE_DISABLE_HARD_AI_ECONOMIC: "Standard restriction"
- RULE_DISABLE_HARD_AI_ECONOMIC_DESC: "A standard restriction for AI, which does not allow it to strengthen his economy. For a historical game"
+ RULE_DISABLE_HARD_AI_ECONOMIC_DESC: "A standard restriction for AI, which does not allow it to strengthen its economy. For a historical game"
  RULE_ENABLE_HARD_AI_ECONOMIC: "No restrictions"
- RULE_ENABLE_HARD_AI_ECONOMIC_DESC: "If you are bored that every game of AI does not get out of the economic crisis - this is for you. AI is no longer limited in making decisions about its economy. Be ready that many countries will become richer than yours. Only for those who are not afraid of a challenge. Greetings from the Battle AI;)"
+ RULE_ENABLE_HARD_AI_ECONOMIC_DESC: "If you are bored that every game of AI does not get out of the economic crisis - this is for you. AI is no longer limited in making decisions about its economy. Be ready for many countries will become richer than yours. Only for those who are not afraid of a challenge. Greetings from the Battle AI;)"
  RULE_DISABLE_AI_DEBT_WAR_TITLE: "Debt Wars for AI"
  RULE_DISABLE_AI_DEBT_WAR: "Disable"
  RULE_DISABLE_AI_DEBT_WAR_DESC: "This disables the debt war feature for the AI. The AI will no longer take the option to invade a nation that defaults on its debt."
@@ -591,3 +591,12 @@
  RULE_SPREAD_INFLUENCE_GAIN_1_5_DESC: "1% influence gained per spread action. The default influence gain per spread influence action."
  RULE_SPREAD_INFLUENCE_GAIN_1: "1%"
  RULE_SPREAD_INFLUENCE_GAIN_1_DESC: "1% influence gained per spread action. For if you really want to slow down influence gain."
+ RULE_AI_STARTING_POLITICAL_POWER: "AI Starting Political Power"
+ RULE_AI_STARTING_POLITICAL_POWER_NO: "No Starting Political Power"
+ RULE_AI_STARTING_POLITICAL_POWER_NO_DESC: "The AI will not start with any political power."
+ RULE_AI_STARTING_POLITICAL_POWER_250: "250 Political Power"
+ RULE_AI_STARTING_POLITICAL_POWER_250_DESC: "Add 250 Political Power to all AI nations."
+ RULE_AI_STARTING_POLITICAL_POWER_500: "500 Political Power"
+ RULE_AI_STARTING_POLITICAL_POWER_500_DESC: "Add 500 Political Power to all AI nations."
+ RULE_AI_STARTING_POLITICAL_POWER_1000: "1000 Political Power"
+ RULE_AI_STARTING_POLITICAL_POWER_1000_DESC: "Add 1000 Political Power to all AI nations."
