--- a/localisation/french/MD_laws_l_french.yml
+++ b/localisation/french/MD_laws_l_french.yml
@@ -22,7 +22,7 @@
  economic_boom: "Boom économique"
  economic_boom_desc: "Notre économie est en plein essor."
  econ_cycle_upg_cost_TT: "\n§HCoût de l'amélioration :§! [?THIS.econ_cycle_upg_cost]$ §Hmilliards§!"
- economic_cycle_TT: " - Pour stimuler l'économie, nous devons y injecter des liquidités. Cela se fait via des outils de la Banque centrale tels que la réduction du taux d'intérêt et l'augmentation de la masse monétaire - ainsi que par des dépenses supplémentaires de relance du gouvernement. Cependant, une trop grande interférence augmente les risques de futures bulles économiques.\n"
+ economic_cycle_TT: " - To stimulate the economy we need to inject liquidity into it. This is done via Central Bank tools such as lowering the interest rate and expanding the money supply - as well as extra government stimulus spending. However, too much interference increases the risks of future economic bubbles.\n"
  law_corruption_TT: "- En dépensant du poids politique, nous pouvons commencer à diminuer la corruption de notre gouvernement pour créer un gouvernement transparent et efficace."
  corruption: "Niveau de corruption"
  paralyzing_corruption: "(10) Corruption paralysante"
@@ -95,7 +95,7 @@
  defence_09_TT: "\n[defence_09_cost]$$ §Hmilliards§! sont dépensés dans le militaire.\n"
  education_budget: "Budget de l'éducation"
  edu_01: "Soutien basique pour l'enseignement primaire"
- edu_01_desc: "Notre système d'éducation primaire souffre depuis longtemps d'un sous-financement chronique. Cela affecte non seulement la qualité de l'éducation, mais aussi les opportunités de développement de la jeune génération.\n[edu_spending_protest_TT]"
+ edu_01_desc: "Our primary education system has long suffered from chronic underfunding. This negatively affects not only the quality of education but also the development opportunities of the younger generation.\n[edu_spending_protest_TT]"
  edu_01_TT: "\n[education_01_rate]$$ §Hmilliards§! sont dépensés dans l'éducation.\n"
  edu_02: "Soutien basique pour l'enseignement primaire et secondaire"
  edu_02_desc: "Un investissement à long terme dans l'éducation primaire et secondaire de notre peuple aujourd'hui ouvrira les possibilités illimitées de demain. Pour garantir à tous les enfants un bon départ dans la vie, nous devons leur garantir un niveau minimum de financement pour les écoles à travers le pays.\n[edu_spending_protest_TT]"
@@ -155,13 +155,13 @@
  police_02_desc: "Notre police et les services de renseignement font le travail, mais pas grand chose d'autre. D'autres actions ne se produisent que sous la pression publique."
  police_02_TT: "\n[police_02_rate]$$ §Hmilliards§! sont dépensés pour la sécurité intérieure.\n"
  police_03: "Financement élevé de la police et du renseignement"
- police_03_desc: "Nos services de police et de renseignement sont bien financés. La loi et l'ordre sont bien préservés et ils ont la capacité de surveiller les intrigues internes et étrangères."
+ police_03_desc: "Our police and intelligence services are well funded. Law and order are well preserved, and they can have a watchful eye on internal and foreign plots.\n[police_spending_protest_TT]"
  police_03_TT: "\n[police_03_rate]$$ §Hmilliards§! sont dépensés pour la sécurité intérieure.\n"
  police_04: "Vaste équipement de police et de renseignement"
- police_04_desc: "Nos services de police et de renseignement sont très bien financés. Ils ont la capacité de lutter contre la corruption et le crime. De plus, ils surveillent tous les mouvements dangereux."
+ police_04_desc: "Our police and intelligence services are very well funded. They have the capacity to crack down on corruption and crime. In addition, they keep extensive tabs on all dangerous movements.\n[police_spending_protest_TT]"
  police_04_TT: "\n[police_04_rate]$$ §Hmilliards§! sont dépensés pour la sécurité intérieure.\n"
  police_05: "État policier"
- police_05_desc: "Nos services de police et de renseignement reçoivent de très grandes ressources. Ils ont la capacité de lutter contre la corruption et le crime et ont d'énormes opérations pour garder un œil sur tous les complots internes et les complots étrangers."
+ police_05_desc: "Our police and intelligence services receive very large resources. They have the capacity to crack down on corruption and crime and have huge operations to keep tabs on all internal dissent and foreign plots.\n[police_spending_protest_TT]"
  police_05_TT: "\n[police_05_rate]$$ §Hmilliards§! sont dépensés pour la sécurité intérieure.\n"
  Military_policies: "Politiques militaires"
  Conscription_Law: "Loi sur la conscription"
@@ -188,11 +188,11 @@
  intervention_isolation: "Isolement"
  intervention_isolation_desc: "Notre pays s'intéresse davantage aux affaires intérieures et ne souhaite pas se lancer dans des aventures militaires."
  intervention_local_security: "Sécurité locale"
- intervention_local_security_desc: "Nous pouvons fournir des armes à nos amis, mais nous sommes principalement concernés par nos propres frontières."
+ intervention_local_security_desc: "We can provide our friends with weapons, however, we are mainly concerned with our own borders."
  intervention_limited_interventionism: "Interventionnisme limité"
  intervention_limited_interventionism_desc: "Nous sommes prêts à risquer la vie de nos propres soldats pour assurer la survie de nos amis."
  intervention_regional_interventionism: "Interventionnisme régional"
- intervention_regional_interventionism_desc: "Il est important de maintenir l'ordre dans les zones proches de chez nous, et nous devons utiliser la menace de la guerre pour maintenir cet ordre."
+ intervention_regional_interventionism_desc: "The region which we call home is of the utmost importance. We must use the threat of war to keep order and to prevent instability in the area we call home."
  intervention_global_interventionism: "Interventionnisme mondial"
  intervention_global_interventionism_desc: "Nos forces armées vont loin et il est de notre devoir de maintenir la stabilité du monde."
  intervention_neo_imperialism: "Néo-impérialisme"
@@ -209,10 +209,10 @@
  officer_advanced_training_desc: "Les personnes qui se montrent prometteuses seront choisies et recevront une formation avancée sur la manière de diriger leurs troupes."
  officer_advanced_training_TT: "Salaire militaire : §R+30%§!\n"
  officer_military_school: "École militaire pour officier"
- officer_military_school_desc: "Nous avons mis en place des écoles militaires spéciales où les personnes douées peuvent recevoir une formation directe pour diriger des troupes dès le début de leur carrière militaire."
+ officer_military_school_desc: "We have set up special military schools where gifted individuals can get direct training in leading troops right from the start of their military careers."
  officer_military_school_TT: "Risque de mort d'un général au combat : §G-15%§!\n"
  officer_military_academy: "Académie militaire pour officier"
- officer_military_academy_desc: "Nous avons mis en place de prestigieuses académies militaires où notre officier apprendra les meilleures tactiques et stratégies et développera de nouveaux moyens de faire la guerre."
+ officer_military_academy_desc: "We have set up prestigious military academies where our officers will learn the best tactics and strategies, and where will develop new ways to wage war."
  officer_military_academy_TT: "Risque de mort d'un général au combat : §G-30%§!\n"
  officer_international_education: "Éducation internationale pour officier"
  officer_international_education_desc: "Avec l'aide de nos alliés, nous avons accès à un vaste réservoir de connaissances et de ressources pour nous assurer que nos officiers sont prêts à faire face aux conséquences d'une guerre."
@@ -220,17 +220,17 @@
  trade_laws: "Législation commerciale"
  trade_laws_desc: "Les lois commerciales sont importantes. Elles déterminent également la manière dont notre grand pays se développe et s'étend sur le plan économique."
  md_closed_economy: "Économie fermée"
- md_closed_economy_desc: "Une économie fermée est coupée du monde. Peu ou pas d'échanges avec le monde extérieur, dans la mesure du possible. Le pays ne compte que sur lui-même, autant qu'il le peut. Cependant, certaines ressources sont toujours exportées vers certains de nos alliés les plus proches."
+ md_closed_economy_desc: "A closed economy is shut from the world. Little to no trade with the outside world if possible. The country purely relies on itself as much as it can. However, some resources are still exported to some of our closest allies."
  consumption_economy: "Économie de consommation"
  consumption_economy_desc: "Une économie de consommation décrit une économie tirée par les dépenses de consommation en pourcentage de son produit intérieur brut, par opposition aux autres composants majeurs du PIB."
  semi_consumption_economy: "Économie de semi-consommation"
- semi_consumption_economy_desc: "Les économies de semi-consommation sont un concept relativement nouveau. Il s'agit de la combinaison d'une économie d'exportation et d'une économie de consommation, sans l'inconvénient d'être économiquement dépendante d'autres sources de revenus. Cependant, une économie de semi-consommation dépend toujours fortement des dépenses de consommation en pourcentage du PIB, contrairement à une véritable économie mixte."
+ semi_consumption_economy_desc: "Semi-consumption economies are a relatively new phenomenon. They are a hybrid of an Export and Consumption economy without the hassle of being economically dependent on other means of income. However, a semi-consumption economy still relies heavily on consumer spending as a percent of GDP, unlike a true mixed economy."
  mixed_economy: "Économie mixte"
  mixed_economy_desc: "Les économies mixtes ressemblent beaucoup aux économies de semi-consommation. Elles sont encore moins dépendantes des dépenses de consommation dans leur ensemble pour constituer leur PIB."
  export_economy: "Économie d'exportation"
  export_economy_desc: "Les exportateurs de produits de base comprennent les pays disposant d'importants gisements de ressources naturelles, les pays à production intermédiaire ou les pays disposant de vastes étendues de terres agricoles. Ces pays exportent une grande partie de leurs matières premières et de leurs biens intermédiaires vers d'autres pays, ce qui explique l'essentiel de leur croissance économique."
  globalized_trade_economy: "Économie commerciale mondialisée"
- globalized_trade_economy_desc: "Une économie commerciale mondialisée est beaucoup plus dépendante du commerce mondial que n'importe quel autre pays. Presque toutes nos ressources sont envoyées sur le marché et presque toutes nos ressources en général proviennent du commerce."
+ globalized_trade_economy_desc: "A globalized trade economy is much more reliant on global trade than any other country. Nearly all of our resources are sent to market and nearly all of our resources tend to be from trade."
  cannot_go_lower_than_bureau_01_tt: "Impossible de réduire §Y$bureaucracy$§! en dessous de §Y$bureau_01$§!\n"
  cannot_go_higher_than_bureau_01_tt: "Impossible d'augmenter §Y$bureaucracy$§! au-dessus de §Y$bureau_01$§!\n"
  cannot_go_lower_than_bureau_02_tt: "Impossible de réduire §Y$bureaucracy$§! en dessous de §Y$bureau_02$§!\n"
@@ -305,3 +305,20 @@
  cannot_go_higher_than_police_04_tt: "Impossible d'augmenter §Y$crime_fighting$§! au-dessus de §Y$police_04$§!\n"
  cannot_go_lower_than_police_05_tt: "Impossible de réduire §Y$crime_fighting$§! en dessous de §Y$police_05$§!\n"
  cannot_go_higher_than_police_05_tt: "Impossible d'augmenter §Y$crime_fighting$§! au-dessus de §Y$police_05$§!\n"
+ migration_laws: "Migration Laws"
+ open_borders: "Open Borders"
+ open_borders_desc: "Open borders represent extremely light or non-existent migration laws in the country. It allows the mostly free transference of people to and from the country."
+ open_borders_tt: "\n$$[migration_laws_rate_01] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
+ slightly_regulated_immigration: "Lightly Regulated Migration"
+ slightly_regulated_immigration_desc: "Imposing some light regulations on the movement of people in and out of the country should help stem the tide of some unwanted migrants in the nation on the grounds of a former criminal charge or otherwise."
+ slightly_regulated_immigration_tt: "\n$$[migration_laws_rate_02] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
+ regulated_immigration: "Regulated Migration"
+ regulated_immigration_desc: "Establishing regulations such as limiting the number of migrants, requiring clean criminal records, minor visas and more will be imperative for establishing a common sense mentality for the migration laws."
+ regulated_immigration_tt: "\n$$[migration_laws_rate_03] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
+ heavily_regulated_immigration: "Heavily Regulated Migration"
+ heavily_regulated_immigration_desc: "Imposing heaving regulations on the number of regulations, strict and hard to achieve visas, established agencies for the sake of enforcing these rules, and curbing all forms of illegal immigration."
+ heavily_regulated_immigration_tt: "\n$$[migration_laws_rate_04] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
+ closed_borders: "Closed Borders"
+ closed_borders_desc: "The borders of the nation must be closed to ensure the identity of the nation is retained we must close our borders."
+ closed_borders_tt: "\n$$[migration_laws_rate_05] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
+ current_migration_rate: "\nMaximum §YMigration Rate§!: [?max_net_immigration_rate|%]\nCurrent Net §YMigration Rate§!: [?net_immigration_rate|%]"
