--- a/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
@@ -2102,8 +2102,8 @@
  leu_fuel_production_modifier: "Rendement de production d'uranium faiblement enrichi (LEU)"
  heu_fuel_production_modifier: "Rendement de production d'uranium hautement enrichi (HEU)"
  energy_use: "Consommation d'énergie"
- energy_use_multiplier: "All Sources of Power Use Multiplier"
- pop_energy_use_multiplier: "Population Power Use Multiplier"
+ energy_use_multiplier: "Multiplicateur de consommation d'énergie"
+ pop_energy_use_multiplier: "Multiplicateur de consommation d'énergie de la population"
  fossil_pp_energy_generation_modifier: "Génération d'énergie de la §YCentrale à combustibles fossiles§!"
  fossil_pp_fuel_consumption_modifier: "Consommation de carburant de la §YCentrale à combustibles fossiles§!"
  nuclear_energy_generation_modifier: "£nuclear_reactor_texticon  Génération d'énergie de la §Y$nuclear_reactor$§!"
@@ -2135,15 +2135,15 @@
  offices_worker_requirement_modifier: "Main-d'œuvre requise pour les bureaux"
  buildings_worker_requirement_cmodifier: "Main-d'œuvre requise pour tous les bâtiments"
  productivity_growth_modifier: "Croissance mensuelle de la productivité"
- civilian_factories_productivity: "§YCivilian Factories§! Productivity"
- military_factories_productivity: "§YMilitary Factories§! Productivity"
- dockyard_productivity: "§YDockyards§! Productivity"
- offices_productivity: "§YOffices§! Productivity"
+ civilian_factories_productivity: "Productivité des usines civiles"
+ military_factories_productivity: "Productivité des usines militaires"
+ dockyard_productivity: "Productivité des chantiers navals"
+ offices_productivity: "Productivité des bureaux"
  agricolture_productivity_modifier: "Productivité de l'agriculture"
  high_unemployment_threshold_modifier: "Seuil de chômage élevé"
  resource_sector_workers_modifier: "Travailleurs nécessaires à l'extraction des ressources"
  gdp_from_resource_sector_modifier: "Génération du PIB par le secteur des ressources"
- agriculture_workers_modifier: "Workers Needed in §YSubsistence Agriculture§!"
+ agriculture_workers_modifier: "Travailleurs nécessaires à l'agriculture"
  international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon Modificateur de §YRevenu du Marché International§!"
  international_market_purchase_modifier: "£tax_gain_multiplier_modifier_texticon Modificateur de §YAchat sur le Marché International§!"
  CAT_support_weapons: "£research_bonus_texticon Armes de soutien"
@@ -2157,6 +2157,10 @@
  CAT_ai_research: "£research_bonus_texticon Technologie d'intelligence artificielle"
  CAT_3d: "£research_bonus_texticon Technologie d'impression 3D"
  CAT_satellite: "£research_bonus_texticon Technologie satellite"
- modifier_production_speed_agriculture_district_factor: "£construction_speed_texticon §Y$agriculture_district$§! Construction Speed"
- agriculture_district_worker_requirement_modifier: "Workers Needed in §YCommercialized Agriculture§!"
+ modifier_production_speed_agriculture_district_factor: "£construction_speed_texticon §Y$agriculture_district$§! Vitesse de construction"
+ agriculture_district_worker_requirement_modifier: "Travailleurs recherchés dans §YL'agriculture commercialisée§!"
  agriculture_district_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$agriculture_district$§! Tax Revenue Multiplier"
+ border_control_multiplier_modifier: "§YMigration Control Cost§! Multiplier"
+ maximum_migration_rate_value: "Maximum §YMigration Rate§! Value"
+ base_migration_rate_value: "Base §YMigration Rate§! Value"
+ migration_rate_value_factor: "§YMigration Rate§! Value Factor"
