--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -266,9 +266,9 @@
  CHI_Peacekeepers: "维和任务"
  CHI_Peacekeepers_desc: "我们的人员被部署在海外，以协助联合国在非洲大陆的维和行动，这为我们的部队提供了急需的经验，并提高了我们作为国际社会可靠成员的信誉。"
  SCO_development_assistance: "上合组织发展援助"
- SCO_development_assistance_desc: "在上海合作组织的支持下，我们获得了急需的发展援助。"
+ SCO_development_assistance_desc: "我们在上海合作组织的支持下获得了急需的发展援助。"
  SCO_development_assistance_2: "[CHI.GetAdjective]发展援助"
- SCO_development_assistance_2_desc: "在上海合作组织的支持下，中国为我们提供了急需的发展援助"
+ SCO_development_assistance_2_desc: "我们在上海合作组织框架下获得了中国急需的发展援助。"
  SCO_joint_drill: "上合组织联合演习"
  CHI_Invigorate_Country_Through_STE1: "科教兴国战略"
  CHI_promoting_innovation: "促进创新"
@@ -295,13 +295,13 @@
  NKO_nuclear_tests: "核试验"
  NKO_nuclear_tests_desc: "每隔几年，朝鲜都会进行核武器试验。尽管中国与朝鲜关系密切，但此举遭到了包括中国在内的世界大国的广泛谴责。虽然朝鲜坚持说，它的核武器项目是防御性的，但是很多人担心[NKO.GetLeader]可能会对美国或其盟友使用这些武器。"
  Non_State_Actor: "非国家角色"
- Non_State_Actor_desc: "许多国际角色，从叛乱团体到非政府组织，都具有国际上的意义，但由于没有被承认为国家，他们在许多不同方面处于严重的不利地位。这些非国家角色中有一些人希望通过推翻一个不公正的政府或建立一个新的政府和重新划定国际边界来控制一个现有的国家。另一些人没有建立国家的野心，只是在缺乏中央政府权威的地方慢慢积累权力和财富。"
+ Non_State_Actor_desc: "从叛乱组织到非政府组织，许多国际行为体都具有国际影响力，但由于不被承认为国家，在许多方面处于严重不利地位。其中一些非国家行为体希望通过推翻不公正的政府或组建新政府并重新划定国际边界来控制现有国家。其他人则不抱有建国的野心，而是使用粗暴的武力在缺乏中央政府权威的地方环境中积累权力和财富。"
  Lacks_International_Recognition: "有抱负的国家"
- Lacks_International_Recognition_desc: "有些国家拥有你通常会联想到一个国家的一切。一个官僚机构，一支军队，一面国旗等等。但是，如果没有国际承认的合法性所带来的额外好处，它们的国家地位就永远不会完整。这些国家可能寻求通过在海外为其事业进行拉票活动来获得这种承认，其最终目标是赢得一大批国家的支持，以便成为国际社会的正式成员。"
+ Lacks_International_Recognition_desc: "有些国家拥有通常与国家相关的一切。官僚机构、军队、国旗等等。然而，如果没有国际认可的合法性印记，他们的国家地位就永远不会完整。这些国家可能会通过在海外为自己的事业而战，寻求​​获得这种认可，最终目标是赢得足够多国家的支持，成为国际社会的正式成员。"
  rival_government: "对立政府"
- rival_government_desc: "争夺全国控制权的内战往往会产生两个或两个以上的政府，它们宣称自己是人民的合法代表。这个政府所代表的是提出这种要求的一个政府，但由于其合法代表的地位只有少数其他国家——如果有其他国家——承认的事实而处于不利地位。因此，它不能在象联合国这样的国际论坛上代表其国家。"
+ rival_government_desc: "争夺整个国家控制权的内战往往会产生两个或多个自称是其人民合法代表的政府。这个政府就是这样宣称的，但它的劣势在于，其合法代表地位只得到少数几个国家的承认。因此，它不能在联合国等国际论坛上代表其国家。"
  ASEAN_Member: "东南亚国家联盟成员"
- ASEAN_Member_desc: "东南亚国家联盟是一个总部设在雅加达的主要经济政府间组织，最初成立于1967年。此后它扩大了范围，囊括那些最初被排除在冷战紧张环境之外的国家，并寻求抗衡中国日益增长的影响力，同时保持独立于西方。它致力于多边主义、国际法、和平解决争端、不干涉和自决的原则。"
+ ASEAN_Member_desc: "东南亚国家联盟是一个以经济为主的政府间组织，总部设在雅加达，最初成立于1967年。此后，该组织不断扩大，吸纳了那些原本在冷战紧张环境中被排除在外、力图对抗中国日益增长的影响力并保持独立于西方的国家。该组织致力于多边主义、国际法、和平解决争端、不干涉和自决的原则。"
  basic_cyber_security_infrastructure: "基本的网络安全基础设施"
  basic_cyber_security_infrastructure_desc: "我们的系统成功阻止敌对外国势力网络攻击的机率很小。"
  substantial_cyber_security_infrastructure: "充实的网络安全基础设施"
@@ -917,3 +917,7 @@
  idea_generic_the_manpower_solution_desc: "我们可以鼓励更多的人加入劳动力大军，从而改善国家的所有经济部门。"
  idea_generic_worker_productivity: "提高人均生产率"
  idea_generic_worker_productivity_desc: "我们的工人生产率极高，而且由于近年来技术的进步，我们应该继续鼓励这种变革，并在我们国家实现转变。"
+ MNC_city_of_casino: "富人的赌城"
+ MNC_city_of_casino_desc: "摩纳哥因赌场众多而被欧洲人亲切地称为“赌城”，尤其是摩纳哥的赌场，是富豪们的聚集地，摩纳哥也是亿万富翁和富豪们的游乐场。"
+ naval_power_of_the_continent: "大陆海军力量"
+ naval_power_of_the_continent_desc: "我们拥有当前大陆上最大的海军力量，目前我们是大陆上最大的海军力量。假设有人§Y部署的海军人力§!比我们多，他们就可以超越我们。"
