--- a/localisation/simp_chinese/replace/replaced_from_focus_filter_tag_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_focus_filter_tag_l_simp_chinese.yml
@@ -39,3 +39,59 @@
  FOCUS_FILTER_USA_CONGRESS: "议会"
  FOCUS_FILTER_TFV_AUTONOMY: "自治"
  FOCUS_FILTER_INTERNAL_AFFAIRS: "内政"
+ FOCUS_FILTER_MILITARY: "军事"
+ FOCUS_FILTER_ECONOMY: "经济"
+ FOCUS_FILTER_DIPLOMACY: "外交"
+ FOCUS_FILTER_SPR_CULTURE: "西班牙文化"
+ FOCUS_FILTER_IRANIAN_NUCLEAR_DEV: "伊朗核发展"
+ FOCUS_FILTER_ARMY: "军队"
+ FOCUS_FILTER_RENEWABLE_ENERGY_INFRASTRUCTURE: "可再生能源基础设施"
+ FOCUS_FILTER_SKODA: "斯柯达"
+ FOCUS_FILTER_SPACE: "太空"
+ FOCUS_FILTER_PMC_WAGNER: "私人军事公司瓦格纳"
+ FOCUS_FILTER_RUSSIA_ARMY: "俄罗斯军队"
+ FOCUS_FILTER_RUSSIA_CPRF: "俄罗斯联邦共产党"
+ FOCUS_FILTER_RUSSIA_LDPR: "俄罗斯自由民主党"
+ FOCUS_FILTER_RUSSIA_UNITED: "统一俄罗斯党"
+ FOCUS_FILTER_RUSSIA_JUST: "公正俄罗斯党"
+ FOCUS_FILTER_RUSSIA_YABLO: "亚博卢"
+ FOCUS_FILTER_RUSSIA_PARNAS: "人民自由党"
+ FOCUS_FILTER_RUSSIA_SPS: "右翼力量联盟"
+ FOCUS_FILTER_RUSSIA_NAZBOLS: "民族布尔什维克"
+ FOCUS_FILTER_RUSSIA_SHIZO: "概念党联合"
+ FOCUS_FILTER_RUSSIA_ECONOMY: "俄罗斯经济"
+ FOCUS_FILTER_RUSSIA_SUBJECT: "俄罗斯联邦主体"
+ FOCUS_FILTER_TRANSNISTRIA_HISTORIC: "史实路线"
+ FOCUS_FILTER_TRANSNISTRIA_ARMY: "德涅斯特河沿岸军队"
+ FOCUS_FILTER_TRANSNISTRIA_MONARCHY: "君主主义"
+ FOCUS_FILTER_TRANSNISTRIA_ECONOMY: "经济"
+ FOCUS_FILTER_TRANSNISTRIA_SOCDEM: "民主主义"
+ FOCUS_FILTER_TRANSNISTRIA_COMMI: "共产主义"
+ FOCUS_FILTER_TRANSNISTRIA_REPUBLIC: "共和主义"
+ FOCUS_FILTER_TRANSNISTRIA_INTEGRATE_MLV: "整合摩尔多瓦"
+ FOCUS_FILTER_TRANSNISTRIA_INDEP: "独立"
+ FOCUS_FILTER_TRANSNISTRIA_SHERIFF: "“谢里夫”"
+ FOCUS_FILTER_TRANSNISTRIA_UKRAINE: "亲乌克兰"
+ FOCUS_FILTER_OSSETIA_MAIN: "主国策树"
+ FOCUS_FILTER_OSSETIA_ANTIGEO: "与格鲁吉亚的战争"
+ FOCUS_FILTER_OSSETIA_ANTIBANDIT: "打击塔杰夫家族"
+ FOCUS_FILTER_OSSETIA_FOREIGN: "外交政策"
+ FOCUS_FILTER_OSSETIA_COMMI: "共产主义"
+ FOCUS_FILTER_OSSETIA_NYKHAZ: "讲坛"
+ FOCUS_FILTER_OSSETIA_PEOPLE: "人民党"
+ FOCUS_FILTER_FRA_POLITICAL_VIOLENCE: "政治暴力"
+ FOCUS_FILTER_FRA_OCCUPATION_COST: "占领开销"
+ FOCUS_FILTER_CHI_INFLATION: "通货膨胀"
+ FOCUS_FILTER_MEX_CHURCH_AUTHORITY: "教会权威"
+ FOCUS_FILTER_MEX_CAUDILLO_REBELLION: "考迪罗叛乱"
+ FOCUS_FILTER_SPA_CIVIL_WAR: "西班牙内战"
+ FOCUS_FILTER_SPA_CARLIST_UPRISING: "卡洛斯派叛乱"
+ FOCUS_FILTER_GRE_DEBT_TO_IFC: "国际金融委员会债务"
+ FOCUS_FILTER_TUR_KURDISTAN: "库尔德斯坦"
+ FOCUS_FILTER_TUR_KEMALISM: "凯末尔主义"
+ FOCUS_FILTER_TUR_TRADITIONALISM: "传统主义"
+ FOCUS_FILTER_SOV_POLITICAL_PARANOIA: "政治偏执度"
+ FOCUS_FILTER_PROPAGANDA: "政治宣传"
+ FOCUS_FILTER_ARMY_XP: "陆军经验"
+ FOCUS_FILTER_NAVY_XP: "海军经验"
+ FOCUS_FILTER_AIR_XP: "空军经验"
