--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -2257,5 +2257,5 @@
  agriculture_district_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$agriculture_district$§! Tax Revenue Multiplier"
  border_control_multiplier_modifier: "§YMigration Control Cost§! Multiplier"
  maximum_migration_rate_value: "Maximum §YMigration Rate§! Value"
- base_migration_rate_value: "Base §YMigration Rate§! Value"
- migration_rate_value_factor: "§YMigration Rate§! Value Factor"
+ base_migration_rate_value: "Base §YNet Migration Rate§!"
+ migration_rate_value_factor: "§YNet Migration Rate§! Value Factor"
