Added various Wonders
Added wonders (without effects) in:
-Afghanistan
-Armenia
-Algeria
-Albania
-Equatorial GUinea

--- a/localisation/english/monuments_l_english.yml
+++ b/localisation/english/monuments_l_english.yml
@@ -538,4 +538,32 @@
  MONUMENT_182_DESC: "The §Y$MONUMENT_182_NAME$§! is a 240 kilometers long canal in [This.GetName]. Originally named the §YCanal royal en Languedoc§! and renamed by French revolutionaries to §Y$MONUMENT_182_NAME$§! in 1789, the canal is considered one of the greatest construction works of the 17th century. It connects the Mediterranean Sea and the Atlantic Ocean, with the help of the §YCanal de Garonne§!."
 
  MONUMENT_1001_NAME: "Hotel Sipopo"
- MONUMENT_1001_DESC: "The §Y$MONUMENT_1001_NAME$§! is a test monument."
+ MONUMENT_1001_DESC: "The §Y$MONUMENT_1001_NAME$§! is a."
+
+ MONUMENT_1002_NAME: "Shrine of Imam Ali"
+ MONUMENT_1002_DESC: "The §Y$MONUMENT_1002_NAME$§! is a."
+
+ MONUMENT_1003_NAME: "Apollonia of Illyria"
+ MONUMENT_1003_DESC: "The §Y$MONUMENT_1003_NAME$§! is a."
+
+ MONUMENT_1004_NAME: "Timgad"
+ MONUMENT_1004_DESC: "§Y$MONUMENT_1004_NAME$§! is a."
+
+ MONUMENT_1005_NAME: "Vallnord Ski Resort"
+ MONUMENT_1005_DESC: "The §Y$MONUMENT_1005_NAME$§! is a."
+
+ MONUMENT_1006_NAME: "Monastery of Geghard"
+ MONUMENT_1006_DESC: "The §Y$MONUMENT_1006_NAME$§! is a."
+
+ MONUMENT_1007_NAME: ""
+ MONUMENT_1007_DESC: ""
+
+ MONUMENT_1008_NAME: ""
+ MONUMENT_1008_DESC: ""
+
+ MONUMENT_1009_NAME: ""
+ MONUMENT_1009_DESC: ""
+
+ MONUMENT_1010_NAME: ""
+ MONUMENT_1010_DESC: ""
+
