--- a/localisation/english/monuments_mod_l_english.yml
+++ b/localisation/english/monuments_mod_l_english.yml
@@ -1150,3 +1150,32 @@
  monument_1001_level_1_modifier: "$MONUMENT_1001_NAME$"
  monument_1001_level_2_modifier: "$MONUMENT_1001_NAME$"
  monument_1001_level_3_modifier: "$MONUMENT_1001_NAME$"
+ monument_1002_level_0_modifier: "$MONUMENT_1002_NAME$"
+ monument_1002_level_1_modifier: "$MONUMENT_1002_NAME$"
+ monument_1002_level_2_modifier: "$MONUMENT_1002_NAME$"
+ monument_1002_level_3_modifier: "$MONUMENT_1002_NAME$"
+ monument_1003_level_0_modifier: "$MONUMENT_1003_NAME$"
+ monument_1003_level_1_modifier: "$MONUMENT_1003_NAME$"
+ monument_1003_level_2_modifier: "$MONUMENT_1003_NAME$"
+ monument_1003_level_3_modifier: "$MONUMENT_1003_NAME$"
+ monument_1004_level_0_modifier: "$MONUMENT_1004_NAME$"
+ monument_1004_level_1_modifier: "$MONUMENT_1004_NAME$"
+ monument_1004_level_2_modifier: "$MONUMENT_1004_NAME$"
+ monument_1004_level_3_modifier: "$MONUMENT_1004_NAME$"
+ monument_1005_level_0_modifier: "$MONUMENT_1005_NAME$"
+ monument_1005_level_1_modifier: "$MONUMENT_1005_NAME$"
+ monument_1005_level_2_modifier: "$MONUMENT_1005_NAME$"
+ monument_1005_level_3_modifier: "$MONUMENT_1005_NAME$"
+ monument_1006_level_0_modifier: "$MONUMENT_1006_NAME$"
+ monument_1006_level_1_modifier: "$MONUMENT_1006_NAME$"
+ monument_1006_level_2_modifier: "$MONUMENT_1006_NAME$"
+ monument_1006_level_3_modifier: "$MONUMENT_1006_NAME$"
+ monument_1007_level_0_modifier: "$MONUMENT_1007_NAME$"
+ monument_1007_level_1_modifier: "$MONUMENT_1007_NAME$"
+ monument_1007_level_2_modifier: "$MONUMENT_1007_NAME$"
+ monument_1007_level_3_modifier: "$MONUMENT_1007_NAME$"
+ monument_1008_level_0_modifier: "$MONUMENT_1008_NAME$"
+ monument_1008_level_1_modifier: "$MONUMENT_1008_NAME$"
+ monument_1008_level_2_modifier: "$MONUMENT_1008_NAME$"
+ monument_1008_level_3_modifier: "$MONUMENT_1008_NAME$"
+
