--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ v1.10.2
   - Encouraged the AI to pass the Charter of Fundamental Rights first before other laws
   - Disabled the AI for the Nuclear System for the time being until we rehash the Missile System
   - Fixed the European Union AI from not providing IPA to EU Candidates (no not the beer)
+  - Turkey should be less likely to bail out Greece while it is in debt throes
 
  Balance:
   - Reduced the amount of fuel consumed by non-electric (population) sources
@@ -17,6 +18,7 @@ v1.10.2
   - Rebalanced Greek focuses in the Economy tree to make it less of a pain in the ass
   - Reduced base yearly population growth from 0.01 to 0.008 to accommodate for the migration system
   - Reduced the Welfare law monthly population and spread it more evenly among the laws
+  - Reduced the Foreign Influence Modifier to America
 
  Bugfix:
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
